--- a/src/sass/components/_input.scss
+++ b/src/sass/components/_input.scss
@@ -8,6 +8,14 @@
 
   background-color: rgba(0, 0, 0, 0.296);
 
+  &__image {
+    img {
+      width: 200px;
+      height: 100px;
+      object-fit: cover;
+    }
+  }
+
   p {
     margin: 0;
     padding: 0;
